--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -4,6 +4,17 @@ page-login {
     // background: linear-gradient(-140deg, #68FB5D, #2BF61E);
 }
 
+.scroll-content {
+  // background-image: linear-gradient(
+  //         rgba(0, 0, 0, 0.45)
+  //         ),url("../assets/imgs/weather.jpeg");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size:cover;
+      width:100%;
+      padding-bottom: 0 !important;
+}
+
  .logo{
    margin: 0 auto;
  }
@@ -50,9 +61,9 @@ ion-card.card {
     padding-right: 10px;
 }
 
-.bottom {
-    bottom: 0;
-}
+// .bottom {
+//     bottom: 0;
+// }
 
 .input-cover {
 position: static;
